--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ankita Resume</title>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <h1>Ankita</h1>
+    <div class="resume">
+        <div class="anki">Ankita Patil</div>
+    </div>
 </body>
 </html>
